<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.kimiscanner.folder.FolderActivity">
    <item
        android:id="@+id/action_type_view"
        android:icon="@drawable/ic_grid_view"
        android:orderInCategory="90"
        android:title="GridView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_open_pdf"
        android:orderInCategory="100"
        android:title="@string/action_open_pdf"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rename"
        android:orderInCategory="100"
        android:title="@string/action_rename"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
