<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp" >

        <Button
            android:id="@+id/dialog_folder_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_share"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/folder_share" />

        <Button
            android:id="@+id/dialog_folder_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_folder_share"
            android:drawableStart="@drawable/ic_edit"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/folder_rename" />

        <Button
            android:id="@+id/dialog_folder_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_folder_rename"
            android:drawableStart="@drawable/ic_delete"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/folder_delete" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
