<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.AccountFragment"
    tools:showIn="@layout/activity_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/general"
            android:textColor="#979797"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="#d4d4d4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ac_auth_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingTop="13dp"
                android:text="@string/username"
                android:textColor="#4b4b4b"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ac_auth_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackground"
                android:padding="10dp"
                android:src="@drawable/ic_account_circle" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/general"
            android:textColor="#979797"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/auth_username_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="10dp"
                android:src="@drawable/ic_account_circle" />

            <EditText
                android:id="@+id/auth_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/auth_username_icon"
                android:hint="@string/username"
                android:paddingTop="13dp"
                android:textColor="#4b4b4b"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/auth_password_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="10dp"
                android:src="@drawable/ic_key" />

            <EditText
                android:id="@+id/auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/auth_password_icon"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingTop="13dp"
                android:textColor="#4b4b4b"
                android:textSize="16sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/auth_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:background="@drawable/button_shape"
            android:paddingStart="@dimen/image_button"
            android:paddingEnd="@dimen/image_button"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/colorImageButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/acc_sync_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/acc_backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:paddingStart="@dimen/image_button"
            android:paddingEnd="@dimen/image_button"
            android:text="Backup now"
            android:textAllCaps="false"
            android:textColor="@color/colorImageButton" />

        <Button
            android:id="@+id/acc_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/inner_text_margin"
            android:background="@drawable/button_shape"
            android:paddingStart="@dimen/image_button"
            android:paddingEnd="@dimen/image_button"
            android:text="Restore"
            android:textAllCaps="false"
            android:textColor="@color/colorImageButton" />

    </LinearLayout>

</RelativeLayout>